--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.17.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "framer-motion": "^12.10.5",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
