--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/x-data-grid": "^8.3.1",
     "framer-motion": "^12.12.1",
     "jwt-decode": "^4.0.0",
+    "livekit-client": "^2.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
