--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/x-data-grid": "^8.3.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.12.1",
     "jwt-decode": "^4.0.0",
     "livekit-client": "^2.13.0",
