--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,28 @@
-version: '3.8'
-
 services:
-  # Backend (Go)
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./proxy_params:/etc/nginx/proxy_params
+      - ./certs:/etc/nginx/certs
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - backend
+      - frontend
+      - livekit
+    networks:
+      - converge-net
+
+
+  redis:
+    image: redis:7
+    restart: always
+    networks:
+      - converge-net
+
+
   backend:
     build:
       context: ./Converge
@@ -11,22 +32,19 @@ services:
       - .env
     volumes:
       - ./Converge/storage:/root/storage
-    ports:
-      - "8080:8080"
     depends_on:
       mysql:
         condition: service_healthy
     networks:
       - converge-net
+    expose:
+      - 8080
 
 
-  # Frontend (React + Vite)
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    ports:
-      - "5173:5173"
     env_file:
       - ./frontend/.env
     depends_on:
@@ -36,31 +54,21 @@ services:
        - converge-net
 
 
-  # LiveKit server
   livekit:
     image: livekit/livekit-server:latest
     restart: always
+    volumes:
+      - ./livekit.yaml:/etc/livekit/livekit.yaml:ro
     ports:
-      - "7880:7880"
-      - "7881:7881"
-      - "7882:7882/udp"
-      - "7883:7883/udp"
-      - "7884:7884/udp"
-      - "50000-51000:50000-51000/udp"
-    command:
-      - livekit-server
-      - --health_port=7880
-    environment:
-      # Test values, pls change this :)
-      LIVEKIT_KEYS: "LK1234567890: abcdef1234567890abcdef1234567890"
-      LIVEKIT_PROTOCOL: "http"
-      LIVEKIT_INGRESS: ""
-      LIVEKIT_CERT: ""
-      LIVEKIT_KEY: ""
+      - "50000-50100:50000-50100/udp"
+    command: ["--config", "/etc/livekit/livekit.yaml"]
+    depends_on:
+      - redis
     networks:
       - converge-net
+    expose:
+      - 7880
 
-  # MySQL
   mysql:
     image: mysql:8.0
     restart: always
@@ -69,8 +77,6 @@ services:
       MYSQL_DATABASE: converge_app
       MYSQL_USER: user
       MYSQL_PASSWORD: user
-    ports:
-      - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
