--- a/livekit.yaml
+++ b/livekit.yaml
@@ -3,6 +3,7 @@ bind_addresses:
   - "0.0.0.0"
 
 rtc:
+  node_ip: "192.168.0.16"
   tcp_port: 7881
   port_range_start: 50000
   port_range_end: 50100
