--- a/deploy/local/docker-compose.yaml
+++ b/deploy/local/docker-compose.yaml
@@ -1,6 +1,7 @@
 services:
   mysql:
       image: mysql:8.0
+      container_name: converge_mysql_db
       restart: always
       environment:
         MYSQL_ROOT_PASSWORD: root
